--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.bg-glass {
+    backdrop-filter: blur(16px) saturate(154%);
+    -webkit-backdrop-filter: blur(16px) saturate(154%);
+    background-color: rgb(255, 255, 255);
+    /* border: 1px solid rgba(255, 255, 255, 0.125); */
+}
